Fixing issues regarding contenarization and configuration
